project-docs/versions/v2.25/tdd/[TDD]-version_manager.md
<!-- @id:[TDD]-version_manager -->
## version_manager TDD

```yaml
target_file: skill/ait/ait/version_manager.py
```

### 技术栈
Python 3.10+；依赖 `schemas`(VersionMeta/VersionIndex/VersionChunkEntry/CommitEntry/ChangeRecord 等)、`yaml_io.save_model`、`merge_engine`(merge_file/merge_new_file/VersionChunkOp/MergedFile)、`chunk_parser`(parse_file/parse_text/Chunk)、`hash_utils.chunk_hash`、`index_manager.IndexManager`、`io_utils.atomic_write_text`、`specgraph`(combined_view/combined_specgraph)、`new_model_validator`(validate_invariants/validate_prd_fsd_tdd_graph/violations_to_details)、`git`(subprocess)。

### 实现约束
三态 working→staged→committed；commit 即锁定（本版本不可改）；版本原子（confirm 全有或全无，失败回退——回退范围＝docs/ 与 .meta 关键状态，不残留 merged 标记）；reset 物理删除不留快照；**新模型六不变式在 confirm 门禁强制（merge 前拒绝，全局完整性唯一权威闸口）**。

### 数据结构（@dataclass）
`StageResult{staged,skipped:list[(id,reason)]}`、`UnstageResult{unstaged,not_found}`、`CommitResult{commit_id,changes:list[chg]}`、`StatusReport{version,working,staged,committed,by_action}`、`ConflictReport{chunk_id,reason,recorded_hash,current_hash}`、`MergeResult{merged_chunks,conflicts,skipped,status}`。`VersionManagerError(Exception){code="VERSION_ERROR"}`。

### 代码结构（VersionManager 方法，按职责）
- **生命周期**：`version_meta_path/load_version_meta/save_version_meta`；`create(version,based_on)`（建 meta+空 index；**不预建 legacy prd/impl 子目录——工作区子目录由 atomic_write_text 按需创建**；目录/meta 已存在则报错——显式开版本是幽灵版本〔R3-04〕的入口封堵，CLI `version create` 直达）；`ensure(version)`（meta 存在则 no-op，否则建——容忍目录已存在，新模型 create 用，同样不预建子目录）；`list_versions`；`current`（最新未 merged）。
- **chunk 变更**：`add_chunk(chunk,action,overrides,insert_after,base_hash,source_req)` upsert——同 id 在 working 则就地替换、在 staged/committed 则抛 `CHUNK_LOCKED`、否则尾插；写 summary（≤120）；`remove_chunk`。
- **三态**：`stage(version,chunk_ids=None)`（None=全部 working→staged）；`unstage`；`commit(version,message,req_id)`（staged→committed，建 CommitEntry + ChangeRecord，无 staged 报错）；`uncommit(version,chunk_ids)`（**committed→working 的层级返工原语**——merged 版本拒；返回 {reverted, not_found}；供 prd/fsd/tdd revert 成对返工用）；`status`。
- **锁定**：`lock_prd/lock_impl`（置 phase/标志）；`assert_prd_writable/assert_impl_writable`（锁后抛 LOCKED）；`set_title`。
- **reset**：`reset(version,*,confirmed)`（二次确认，rmtree 版本目录 + 删 meta/index，merged 不可 reset）。
- **校验**：`pre_merge_check`、`_detect_intra_version_dup`（同 @id / 同 @extract 目标重复）。
- **纯门禁**：`gate(version) -> dict`——**可重复跑、零落盘**的 confirm 前置检查报告：merged 拒绝、task 全 done、`_assert_no_duplicate_adds`、六不变式（与 confirm 共享 `_collect_new_model_violations` 内核）、**制品验收（`run_acceptance()`，未配置则跳过；失败追加 `ACCEPTANCE_FAILED` 违例）**；返回 `{version, passed:bool, violations:[{code,message,chunk_id}…], acceptance:{passed,skipped,command,…}}`，不抛不变式异常（merged/版本不存在仍抛）。**CLI 映射：`version confirm`→gate（纯门禁）、`version merge`→confirm（原子合入，内部先过同一门禁）、`version revert`→reset。**
- **合并**：`merge(version,conflict_policy)`——读 committed records，按 file_key 分组，legacy PRD 路由到 docs/prd/global（`_should_route_legacy_prd_to_global`），每文件构造 `VersionChunkOp` 调 merge_file/merge_new_file 写回；`_merge_one_file`、`_with_atomic_impl_deletes`。
- **confirm**：`confirm(version,*,allow_dirty_git=False)`——**phase1 precheck**：所有 task done 否则 `TASK_NOT_DONE`；git 干净否则 `GIT_DIRTY`；`_assert_no_duplicate_adds`；**新模型六不变式门禁 `_assert_new_model_invariants(version)`——委托 `_collect_new_model_violations(version)`（`validate_prd_fsd_tdd_graph(combined_specgraph)` 图合法性+存量悬空 ＋ combined_view+targets → `validate_invariants`，gate 复用同一内核）；违例非空 → 抛 `INVARIANT_VIOLATION`（message 携带违例码与 chunk 明细），零落盘、修复后可重试；视图无新模型节点时 vacuous 过（legacy 项目零影响）**；**制品验收门禁 `run_acceptance()` 结果 passed=False → 抛 `ACCEPTANCE_FAILED`（携带命令与输出尾），于任何落盘之前——先跑不变式（廉价图检）后跑验收（跑测试）**。**phase2 merge（可逆）**：`_backup_state`→`merge`→`_extract_dynamic_global`（变了则 rebuild_baseline+sync_specgraph）→`_merge_specgraph_to_baseline`→`_assert_no_orphan_impl_refs`。**phase3**：`_git_commit(title or "AIT v.. merge")`。任一步失败 `_restore_state(backup)` 并抛 `MERGE_ROLLBACK`——同时还原 docs/ 与 .meta 关键状态，删除本次新建的 `snapshots/{version}/`，不残留 merged 标记。成功写 merged 状态进同一 commit。
- **验收门禁**：`run_acceptance() -> dict`——从 `.meta/config.yaml` 读 `acceptance_command`（字符串）；缺省/空 → `{passed:True, skipped:True, command:None}`（vacuous，legacy 与非测试项目零影响）；否则 `subprocess.run(command, shell=True, cwd=root.parent, capture_output=True, timeout=600)`（cwd 为项目根＝project-docs 的父目录，测试与制品所在处），`passed=(returncode==0)`，返回 `{passed, skipped:False, command, exit_code, output_tail(末 ~2000 字符)}`；超时/异常 → passed:False。`set_acceptance_command(cmd)`：把 acceptance_command 写回 config.yaml（原子写，保留其余键）；`_read_config()`（读 config.yaml → dict，缺失/损坏 → {}）、`_config_path`。
- **内部**：`_assert_new_model_invariants(version)`（六不变式门禁编排）、`_collect_new_model_violations(version)`（gate/confirm 共享的违例收集内核）、`_collect_new_model_target_files(view)`（对 view 中 type=tdd 节点按 ViewNode.version/file 定位 markdown 读 target_file，返回 list[(chunk_id, target_file|None)]）、`_backup_state/_restore_state`（全量状态**字节级**快照与还原：docs/ 全部 *.md ＋ .meta 关键文件〔chunks-index.yaml、specgraph.yaml、versions/{version}.yaml、chunks-index-{version}.yaml〕以 read_bytes 内存快照；还原以字节原样原子写回（临时文件+replace），跨平台不改写行尾；记录 snapshots/{version}/ 是否已存在，回退时删除本次新建者；还原时删除快照后新增的 docs 文件与 .meta 快照集内新增文件）、`_extract_dynamic_global`(+`_upsert_global_chunk`，从 impl @extract 提取 ddl/schema/api)、`_merge_specgraph_to_baseline`(提升 decomposes/details/depends_on 边)、`_assert_no_orphan_impl_refs`、`_assert_no_duplicate_adds`(同 id add 两次→`DUPLICATE_BASELINE_CHUNK`)、`_git_clean/_git_commit`、`_create_snapshot`、`_next_chg_id/_build_change_record`、`write_version_file/read_version_file/chunk_hash_in_version`。

### 错误码
`TASK_NOT_DONE`、`GIT_DIRTY`、`MERGE_ROLLBACK`、`CHUNK_LOCKED`、`LOCKED`、`DUPLICATE_BASELINE_CHUNK`、`VERSION_ERROR`、**`INVARIANT_VIOLATION`、`ACCEPTANCE_FAILED`**。

### 边界条件
meta.phase 值域：legacy `empty/prd_locked/impl_locked` + 新模型 `prd-creating/prd-confirm`（后续层扩展）+ 终态 `merged`——两族值不相交，legacy 命令与新模型命令互不改写对方 phase；merged 版本不可再 confirm/reset；confirm 成功后 git 无脏尾（merged 状态文件并入同一 merge commit）；零 task 时 precheck 通过（taskless 新模型）；confirm 失败回退后：`meta.merged_at` 为 None、`phase` 不变、版本索引 status 不为 merged、baseline `chunks-index.yaml` 与 `specgraph.yaml` 同 confirm 前逐字节一致、本次新建的 `snapshots/{version}/` 不存在，且回退后可直接重试 confirm；**不变式门禁发生在任何落盘之前——被拒后工作区与 .meta 原样，补齐规格（如补 PRD 边）即可重试**。

### 单元测试要求
`tests/test_version_manager.py`、`test_version_confirm*.py`、`test_merge_workflow.py`、`test_v22_new_model_lifecycle.py`：三态/锁定、confirm 两阶段成功与回退、reset、duplicate add 拦截、taskless confirm；confirm 中途异常注入（specgraph 基线合并、git commit 分别失败）→ .meta 全量回滚断言（merged 标记不残留、baseline 索引/specgraph 逐字节一致、快照目录清除）与回退后重试成功；**不变式门禁：孤儿/断链的新模型版本 confirm → `INVARIANT_VIOLATION` 拒且零落盘，补齐 PRD 与边后重试 confirm 成功；纯 legacy 项目 confirm 不受门禁影响（vacuous）**；**gate：违例版本 passed:false 且可重复跑零落盘、合规版本 passed:true、merged 版本抛错；create：重复 create 报错、创建后无 prd/impl 预建子目录、写文件后目录按需出现；uncommit：committed→working、merged 拒、未知 id 报 not_found**；**验收门禁：未配 acceptance_command → skipped 且 gate/confirm vacuous 不受影响；配置绿命令→gate passed/merge 通过；配置红命令→gate 报 ACCEPTANCE_FAILED、confirm 抛 ACCEPTANCE_FAILED 且零落盘；set_acceptance_command 写 config.yaml 保留其余键**。pytest。
